feat: Enhance SummaryLayout with improved API handling and layout adjustments

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 GENERATE_SOURCEMAP=false
 
- 
 # API Base URL
 REACT_APP_API_BASE_URL=http://app.xyinstra.test/api
+
+# API Key for CodeIgniter REST
+REACT_APP_API_KEY=k8f2QmZ9VxL3pT4R7WcA1B0N
